# smart-scheduling-system

./: .gitignore  PRODUCT.md  README.md  add_group_helpers.py  agent.md  db_json_store.py  inject_group_auto_sub.py  launch_server.py  pyproject.toml  render.yaml  requirements.txt  run_forever.ps1  schedule_core.py  script-debug.js  server_runtime.py  start.bat  start_hidden.bat  wrangler.jsonc  wrangler.legacy-redirect.jsonc  提示词.txt
data/: groups.json  hidden_days.json  memo.json  positions.json  schedule.json  staff.json
docs/: class-diagram.mermaid  frontend-design.md  sequence-diagram.mermaid  system_design.md
docs/cloudflare/: api-contract.md  baseline-audit.md  cutover-record.md  operations-runbook.md  source-of-truth-checklist.md
migrations/: 0001_initial.sql  0002_indexes.sql  0003_schedule_cell_groups.sql  0004_position_sort_order.sql
scripts/: export_d1_seed.py  verify-schedule-import.mjs
src/: __init__.py  api.py  config.py  entry.py  import-off-days.js  index.js  legacy-redirect.js  schedule-core.js
src/domain/: __init__.py
src/migration/: __init__.py  importer.py
static/: index.html  schedule-import.js
tests/: test_app_groups.py  test_db_json_store.py  test_frontend_smoke.py  test_migration_hygiene.py  test_schedule_core.py
tests/contract/: test_flask_api_contract.py
tests/integration/: test_d1_migrations.py
tests/unit/: test_domain_compatibility.py  test_snapshot_importer.py
tests/worker/: import-off-days.test.mjs  legacy-redirect.test.mjs  reset-future.test.mjs  schedule-core.test.mjs  schedule-import.test.mjs  (+1 more)
(+11 files in other folders)
